--- a/medias/styles/index.css
+++ b/medias/styles/index.css
@@ -21,7 +21,35 @@ a {
   font-weight: 700;
 }
 /* Header____________________________________________________________ */
+body {
+  background-image: url(../img/bg_hero_desktop.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  padding: 50px; /* a changer */
+}
 .header {
+  display: flex;
+  justify-content: space-between;
+  padding-inline: -5rem;
+  margin: 30px;
+}
+.header__logo {
+  height: 1rem;
+}
+.header__button {
+  padding: 0.4rem;
+  padding-inline: 2rem;
+  background-color: white;
+  color: black;
+  width: 150px;
+  height: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 1rem;
+  box-shadow: 29px 29px 58px #b8b8b8, -29px -29px 58px #ffffff;
+}
+
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -36,9 +64,39 @@ a {
   padding-inline: 2rem;
   border-radius: 1rem;
   background-color: red;
-}
+} */
 /* Main_____________________________________________________________ */
-.main {
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.main__firstParagraph__title {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman";
+  font-size: xx-large;
+  margin-top: 60px;
+}
+.main__firstParagraph__paragraph {
+  margin: 10px;
+}
+.main__firstParagraph__bouton {
+  display: inline-block;
+  width: 180px;
+  height: 30px;
+  background-color: fuchsia;
+  color: white;
+  border: 1px solid fuchsia;
+  border-radius: 25px;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 24px;
+  margin-left: 4px;
+}
+.main__illustration {
+  width: 48vw;
+}
+/* .main {
   background-image: url(../img/bg_hero_desktop.svg);
   background-position-y: -2rem;
   display: flex;
@@ -52,7 +110,7 @@ a {
 }
 .main__illustration {
   width: 60vw;
-}
+} */
 /* Section________________________________________________________ */
 .section {
   display: flex;
