adding font family and style guide

--- a/medias/styles/index.css
+++ b/medias/styles/index.css
@@ -4,6 +4,7 @@
     margin: 0;
     font-weight: 400;
     text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
 }
 html {
     font-size: 18px;
