--- a/medias/styles/index_quentin.css
+++ b/medias/styles/index_quentin.css
@@ -116,6 +116,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 5rem;
 }
 
 /* section__premier block */
