adding font and things

--- a/medias/styles/index.css
+++ b/medias/styles/index.css
@@ -4,7 +4,7 @@
     margin: 0;
     font-weight: 400;
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Open Sans;
 }
 html {
     font-size: 18px;
@@ -112,171 +112,7 @@ main {
   width: 60vw;
 } */
 /* Section________________________________________________________ */
-.section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-/* section__premier block */
-.section__first--block {
-    display: grid;
-    grid-template-columns: 6fr 4fr;
-    grid-template-rows: 4fr 6fr;
-    grid-template-areas:
-        'titre image'
-        'content image';
-    box-shadow: 0 0 20px -15px;
-    width: 80vw;
-    padding: 2rem;
-    padding-left: 6vw;
-    margin: 2rem;
-}
-.section__first--block__title {
-    grid-area: titre;
-    align-self: end;
-}
-.section__first--block__paragraph {
-    grid-area: content;
-}
-.section__first--block__illustration {
-    grid-area: image;
-    height: 50vh;
-}
-
-/* Section__second block */
-.section__second--block {
-    display: grid;
-    grid-template-columns: 4fr 6fr;
-    grid-template-rows: 4fr 6fr;
-    grid-template-areas:
-        'image titre'
-        'image content';
-    box-shadow: 0 0 20px -15px;
-    width: 80vw;
-    padding: 2rem;
-    padding-left: 6vw;
-    margin: 2rem;
-}
-.section__second--block__title {
-    grid-area: titre;
-    align-self: end;
-}
-.section__second--block__paragraph {
-    grid-area: content;
-}
-.section__second--block__illustration {
-    grid-area: image;
-    height: 50vh;
-    padding-right: 6vw;
-}
-
-/* section__troisième block */
-.section__third--block {
-    display: grid;
-    grid-template-columns: 6fr 4fr;
-    grid-template-rows: 4fr 6fr;
-    grid-template-areas:
-        'titre image'
-        'content image';
-    box-shadow: 0 0 20px -15px;
-    width: 80vw;
-    padding: 2rem;
-    padding-left: 6vw;
-    margin: 2rem;
-}
-.section__third--block__title {
-    grid-area: titre;
-    align-self: end;
-}
-.section__third--block__paragraph {
-    grid-area: content;
-}
-.section__third--block__illustration {
-    grid-area: image;
-    height: 50vh;
-}
 
 /* Aside_____________________________________________________ */
-.aside {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    width: 40%;
-    height: 10rem;
-    margin-inline: 30vw;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 0.8rem;
-    box-shadow: 0 0 20px -15px;
-}
-.aside--title {
-    font-size: large;
-}
-.aside__button {
-    background-color: fuchsia;
-    padding: 0.8rem;
-    padding-inline: 2.5rem;
-    border-radius: 2rem;
-    color: white;
-}
 
 /* footer____________________________________________________ */
-.footer {
-    display: grid;
-    position: relative;
-    grid-template-columns: 4fr 4fr 2fr;
-    grid-template-rows: 5fr 3fr 2fr;
-    grid-auto-flow: column;
-    grid-template-areas:
-        'logo . .'
-        'contacts nav social'
-        '. . copyrights';
-    color: white;
-    background-color: hsl(192, 100%, 9%);
-    height: 50vh;
-    padding-left: 5rem;
-}
-.footer__logo {
-    grid-area: logo;
-    align-self: center;
-
-    height: 3rem;
-}
-.footer__contacts {
-    grid-area: contacts;
-    padding-left: 3rem;
-    a {
-        color: #ffffff;
-    }
-    a:hover {
-        text-decoration: underline;
-    }
-}
-.footer__nav {
-    grid-area: nav;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    a {
-        color: #ffffff;
-    }
-    a:hover {
-        text-decoration: underline;
-    }
-}
-.footer__nav li {
-    list-style: none;
-}
-.footer__social {
-    grid-area: social;
-}
-.footer__copyrights {
-    grid-area: copyrights;
-    display: flex;
-    align-self: self-end;
-    margin-left: -2rem;
-    font-size: 12px;
-    position: absolute;
-    bottom: 0;
-    right: 2rem;
-}
