--- a/medias/styles/index.css
+++ b/medias/styles/index.css
@@ -27,13 +27,12 @@ body {
     background-repeat: no-repeat;
     background-position: top;
     z-index: -2;
-    margin: 30px;
 }
 .header {
     display: flex;
     justify-content: space-between;
     margin: 18px;
-    padding: 38px 10px;
+    padding: 38px 40px;
 }
 .header__logo {
     height: 40px;
@@ -57,6 +56,8 @@ main {
     flex-direction: row;
     justify-content: space-evenly;
     margin: 40px;
+    padding: 30px;
+    /* margin: 30px; */
 }
 
 .main__firstParagraph__title {
