--- a/medias/styles/index_quentin.css
+++ b/medias/styles/index_quentin.css
@@ -16,16 +16,17 @@
 .section__first--block {
     display: grid;
     grid-template-columns: 6fr 4fr;
-    grid-template-rows: 4fr 6fr;
+    grid-template-rows: 2fr 3fr 3fr;
     grid-template-areas:
         'titre image'
+        'content image'
         'content image';
     box-shadow: 0 0 20px -15px;
     width: 80vw;
     padding: 2rem;
     padding-left: 6vw;
     margin: 2rem;
-    padding-inline: 5%;
+    /* padding-inline: 5%; */
 }
 .section__first--block__title {
     grid-area: titre;
@@ -38,16 +39,18 @@
 }
 .section__first--block__illustration {
     grid-area: image;
-    height: 300px;
+    /* height: 300px; */
+    width: 100%;
 }
 
 /* Section__second block */
 .section__second--block {
     display: grid;
     grid-template-columns: 4fr 6fr;
-    grid-template-rows: 4fr 6fr;
+    grid-template-rows: 2fr 3fr 3fr;
     grid-template-areas:
         'image titre'
+        'image content'
         'image content';
     box-shadow: 0 0 20px -15px;
     width: 80vw;
@@ -66,7 +69,8 @@
 }
 .section__second--block__illustration {
     grid-area: image;
-    height: 300px;
+    /* height: 300px; */
+    width: 100%;
     padding-right: 6vw;
 }
 
@@ -74,9 +78,10 @@
 .section__third--block {
     display: grid;
     grid-template-columns: 6fr 4fr;
-    grid-template-rows: 4fr 6fr;
+    grid-template-rows: 2fr 3fr 3fr;
     grid-template-areas:
         'titre image'
+        'content image'
         'content image';
     box-shadow: 0 0 20px -15px;
     width: 80vw;
@@ -95,7 +100,8 @@
 }
 .section__third--block__illustration {
     grid-area: image;
-    height: 300px;
+    /* height: 300px; */
+    width: 100%;
 }
 
 /* Aside______________________________________________________________*/
@@ -223,6 +229,6 @@
     margin-left: -2rem;
     font-size: 12px;
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     right: 2rem;
 }
