--- a/medias/styles/responsive_quentin.css
+++ b/medias/styles/responsive_quentin.css
@@ -19,28 +19,64 @@
 
     /* section____________________________________ */
     .section__first--block {
-        grid-template-rows: 4fr 2fr 4fr;
-        grid-template-areas:
-            'image image'
-            'titre titre'
-            'content content';
-        height: 110vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .section__first--block__title {
+        order: 2;
+        text-align: center;
+        align-self: center;
+        margin-top: 10%;
+    }
+    .section__first--block__paragraph {
+        order: 3;
+        text-align: center;
+    }
+    .section__first--block__illustration {
+        order: 1;
+        max-width: 400px;
+        align-self: center;
     }
     .section__second--block {
-        grid-template-rows: 4fr 2fr 4fr;
-        grid-template-areas:
-            'image image'
-            'titre titre'
-            'content content';
-        height: 110vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .section__second--block__title {
+        order: 2;
+        text-align: center;
+        align-self: center;
+        margin-top: 10%;
+    }
+    .section__second--block__paragraph {
+        order: 3;
+        text-align: center;
+    }
+    .section__second--block__illustration {
+        order: 1;
+        max-width: 400px;
+        align-self: center;
     }
     .section__third--block {
-        grid-template-rows: 4fr 2fr 4fr;
-        grid-template-areas:
-            'image image'
-            'titre titre'
-            'content content';
-        height: 110vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .section__third--block__title {
+        order: 2;
+        text-align: center;
+        align-self: center;
+        margin-top: 10%;
+    }
+    .section__third--block__paragraph {
+        order: 3;
+        text-align: center;
+    }
+    .section__third--block__illustration {
+        order: 1;
+        max-width: 400px;
+        align-self: center;
     }
     /* aside______________________________________ */
 
@@ -48,6 +84,49 @@
 }
 /* pour les écrans d'une largeur inférieur à 375px
 (téléphone vertical) */
+@media only screen and (max-width: 630px) {
+    /* header_____________________________________ */
+
+    /* main_______________________________________ */
+
+    /* section____________________________________ */
+
+    /* aside______________________________________ */
+    .aside {
+        width: 95vw;
+    }
+    .aside__title {
+        text-align: center;
+    }
+    /* footer_____________________________________ */
+    .footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: fit-content;
+        padding-top: 150px;
+    }
+    .footer__logo {
+        align-self: center;
+    }
+    .footer__contacts {
+        padding-left: 50px;
+    }
+    .footer__nav {
+        padding-left: 25px;
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+    }
+    .footer__social {
+        align-self: center;
+    }
+    .footer__copyrights {
+        position: static;
+        align-self: center;
+        margin: 2rem;
+    }
+}
 @media only screen and (max-width: 375px) {
     /* header_____________________________________ */
 
