--- a/medias/styles/index_quentin.css
+++ b/medias/styles/index_quentin.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 /* Style Guide________________________________________________________ */
 
 /* Header_____________________________________________________________ */
