--- a/medias/styles/index.css
+++ b/medias/styles/index.css
@@ -6,9 +6,11 @@
     text-decoration: none;
     font-family: Open Sans;
 }
+
 html {
     font-size: 18px;
 }
+
 h1,
 h2,
 h3,
@@ -18,25 +20,27 @@ h6 {
     font-weight: 600;
     font-family: Poppins;
 }
+
 a {
     font-weight: 700;
 }
+
 /* Header____________________________________________________________ */
-body {
-    background-image: url(../img/bg_hero_desktop.svg);
-    background-repeat: no-repeat;
-    background-position: top;
-    z-index: -2;
-}
+
 .header {
     display: flex;
     justify-content: space-between;
-    margin: 18px;
-    padding: 38px 40px;
+    background-color: hsl(193, 100%, 96%);
+    background-image: url(/medias/img/bg_hero_desktop.svg);
+    padding: 60px;
+
+
 }
+
 .header__logo {
     height: 40px;
 }
+
 .header__button {
     padding: 0.4rem;
     padding-inline: 2rem;
@@ -45,7 +49,6 @@ body {
     width: 150px;
     height: 30px;
     text-align: center;
-
     border-radius: 44px;
     box-shadow: 29px 29px 58px #b8b8b8, -29px -29px 58px #ffffff;
 }
@@ -55,37 +58,40 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 40px;
-    padding: 30px;
-    /* margin: 30px; */
+    background-color: hsl(193, 100%, 96%);
+    background-image: url(/medias/img/bg_hero_desktop.svg);
+    padding: 60px;
 }
 
 .main__firstParagraph__title {
     font-family: poppins;
     font-size: 50px;
-    margin-top: 60px;
-    margin-bottom: 30px;
+    margin-top: 50px;
+
 }
+
 .main__firstParagraph__paragraph {
-    margin: 5px;
-    padding-left: 0;
-    padding-bottom: 40px;
-    padding-right: 50px;
+    font-size: 25px;
+    padding: 35px 0;
+    margin-bottom: 20px;
+
+
 }
+
 .main__firstParagraph__bouton {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     padding: 15px 50px;
-    width: 180px;
+    width: 250px;
     height: 30px;
-    background-color: rgb(255, 7, 222);
+    background-color: hsl(322, 100%, 66%);
     color: white;
-    border: 1px solid rgb(255, 7, 222);
     border-radius: 30px;
-    margin-left: 2px;
-    margin-top: 10px;
+
 }
+
 .main__illustration {
-    width: 48vw;
+    width: 50vw;
 }
 
 /* Section________________________________________________________ */
