--- a/medias/styles/responsive.css
+++ b/medias/styles/responsive.css
@@ -27,7 +27,7 @@
         justify-content: space-between;
         background-color: hsl(193, 100%, 96%);
         background-image: url(/medias/img/bg_hero_desktop.svg);
-        padding: 20px;
+        padding: 1rem;
 
 
     }
@@ -38,14 +38,14 @@
     }
 
     .header__button {
-        padding: 0.3rem;
-        font-size: 10px;
-        padding-inline: 1.2rem;
+        padding: 0.8rem;
+        /* font-size: 10px; */
+        padding-inline: 2.5rem;
         background-color: white;
         color: black;
         width: 60px;
-        height: 15px;
-        text-align: center;
+        /* height: 15px; */
+        /* text-align: center; */
         border-radius: 44px;
         box-shadow: 29px 29px 58px #b8b8b8, -29px -29px 58px #ffffff;
     }
